--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,16 @@ figure {
   margin: 0;
 }
 
-.xs-3-4 {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .body {
   margin-bottom: 2em;
+}
+
+.grid {
+  justify-content: center;
+}
+@media only screen and (min-width: 90em) {
+
+  .space {
+    margin-bottom: 1em;
+  }
 }
